# aoc2023

./: .gitignore  pyproject.toml
20231201/: digit_counts.py  digit_counts_v2.py  input_new.txt
20231202/: 20231202_1.py  20231202_2.py
20231203/: 20231203_1.py  20231203_2.py
20231204/: 20231204_1.py  20231204_2.py
20231205/: 20231205_1.py  20231205_1_v2.py  20231205_2.py
20231206/: 20231206_1.py  20231206_2.py
20231207/: 20231207_1.py
20231208/: 20231208_1.py  20231208_2.py
20231209/: 20231209_1.py  20231209_2.py
2025/: 01.py  02.py  02_gem.py  03.py  03_02.py  04.py  05.py  06.py
docs/problem_statements/: Day 1 - Advent of Code 2023.html  Day 2 - Advent of Code 2023.html  Day 3 - Advent of Code 2023.html  Day 4 - Advent of Code 2023.html
test/: test_sol.py
