[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "Advent of Code 2023 problems and solutions"
authors = ["qudsiramiz <qudsiramiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
pandas = "^2.1.3"
matplotlib = "3.5.2"
ipython = "^8.18.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
